tests/ui/fail/bits_param/invalid_param_value_1.rs
use modular_bitfield::prelude::*;

#[bitfield(bits = true)]
pub struct SignInteger {
    sign: bool,
    value: B31,
}

fn main() {}
